# Outreach

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
apps/api/: .env.example  Cargo.toml  Dockerfile  package-lock.json  package.json  railway.toml
apps/api/scripts/: migrate-002.js  migrate.js  neon_setup.sql  run_migrations.sh  verify-db.js
apps/api/src/: config.rs  config.ts  db.ts  error.rs  index.ts  main.rs
apps/api/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs  tokens.rs
apps/api/src/db/: mod.rs
apps/api/src/db/migrations/: 001_init.sql  002_email_system.sql  003_user_templates.sql  004_cv_processing.sql  005_lead_intelligence.sql
apps/api/src/middleware/: auth.ts  rateLimiter.ts
apps/api/src/models/: lead.rs  mod.rs  recording.rs  user.rs
apps/api/src/rag/: chunker.rs  embeddings.rs  mod.rs  search.rs  synthesis.rs
apps/api/src/routes/: auth.rs  auth.ts  cv.ts  discovery.ts  emails.ts  health.ts  icp.ts  leads.rs  leads.ts  mod.rs  recordings.rs  recordings.ts  templates.ts  tracking.ts  users.rs  users.ts
apps/api/src/services/: ai.ts  cv.ts  email.ts
apps/api/src/utils/: validation.ts
apps/desktop/: .env.example  Cargo.toml  README.md  TESTING.md  build.bat  build.ps1
apps/desktop/installer/: build-installer.ps1
apps/desktop/prompts/deep/: interview.md  sales.md  technical.md
apps/desktop/prompts/flash/: bullet_extract.md
apps/desktop/src/: main.rs  updater.rs
apps/desktop/src/analytics/: export.rs  metrics.rs  mod.rs  sentiment.rs
apps/desktop/src/brain/: context.rs  hybrid_router.rs  intent.rs  mod.rs  pipeline.rs
apps/desktop/src/brain/modes/: interview.rs  mod.rs  sales.rs  technical.rs
apps/desktop/src/capture/: app_audio.rs  audio.rs  deepgram.rs  local_whisper.rs  mod.rs  openai_realtime.rs  transcript.rs
apps/desktop/src/config/: mod.rs  settings.rs
apps/desktop/src/deep/: claude.rs  gpt4o.rs  mod.rs  o1.rs  router.rs  streaming.rs
apps/desktop/src/flash/: bullet_extractor.rs  gemini.rs  gpt4o_mini.rs  mod.rs  ollama.rs
apps/desktop/src/prompts/: editor.rs  mod.rs  templates.rs
apps/desktop/src/recording/: mod.rs  session.rs  storage.rs  summary.rs
apps/desktop/src/ui/: app.rs  hotkeys.rs  mod.rs  overlay.rs  runtime.rs  settings.rs  stealth.rs  styles.rs  theme.rs  tray.rs  update_button.rs
apps/desktop/src/ui/components/: deep_card.rs  flash_card.rs  mod.rs  mode_selector.rs  status_bar.rs  transcript_view.rs
apps/desktop/src/voice/: elevenlabs.rs  mod.rs  openai_tts.rs  windows_tts.rs
apps/desktop/wix/: License.rtf  main.wxs
apps/web/: .env.example  next.config.js  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/auth/login/: page.tsx
apps/web/src/app/auth/register/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/emails/: compose-modal.tsx  page.tsx
apps/web/src/app/emails/[id]/: page.tsx
apps/web/src/app/leads/: page.tsx
apps/web/src/app/leads/[id]/: page.tsx
apps/web/src/app/profile/: page.tsx
apps/web/src/app/recordings/: page.tsx
apps/web/src/app/recordings/[id]/: page.tsx
apps/web/src/components/layout/: AppHeader.tsx  MobileNav.tsx  index.ts
apps/web/src/lib/: api.ts  auth.ts  utils.ts
docs/: APP-DOCUMENTATION.md  FEATURES.md  LEAD_INTELLIGENCE_ARCHITECTURE.md  PLANS.md
workers/scraper/: .env.example  Dockerfile  pyproject.toml  railway.toml
workers/scraper/src/hekax_scraper/: __init__.py  main.py
workers/scraper/src/outreach_intelligence/: __init__.py  main.py
workers/scraper/src/outreach_intelligence/config/: __init__.py  settings.py
workers/scraper/src/outreach_intelligence/db/: __init__.py  cache.py  connection.py
workers/scraper/src/outreach_intelligence/enrichment/: __init__.py  aggregator.py  apollo.py  base.py  clearbit.py  crunchbase.py  hunter.py
workers/scraper/src/outreach_intelligence/jobs/: __init__.py
workers/scraper/src/outreach_intelligence/models/: __init__.py  company.py  contact.py  discovery.py  enrichment.py  icp.py  lead.py
workers/scraper/src/outreach_intelligence/routes/: __init__.py  discovery.py  enrichment.py  health.py  scoring.py
workers/scraper/src/outreach_intelligence/scoring/: __init__.py  engine.py  signals.py
workers/scraper/src/outreach_intelligence/signals/: __init__.py
