[package]
name = "hekax-api"
version = "0.1.0"
edition = "2021"
description = "Hekax Backend API - The Brain"
authors = ["AhmediHarhash"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (for OAuth, OpenAI)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Validation
validator = { version = "0.16", features = ["derive"] }

# AWS S3 (R2 compatible)
aws-sdk-s3 = "1"
aws-config = "1"

[dev-dependencies]
tokio-test = "0.4"
