[project]
name = "outreach-intelligence"
version = "0.2.0"
description = "Outreach Lead Intelligence Worker - Enrichment, Scoring, Signal Detection"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",

    # HTTP client
    "httpx>=0.26.0",

    # HTML parsing (for company websites)
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",

    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Environment
    "python-dotenv>=1.0.0",

    # Database
    "asyncpg>=0.29.0",

    # Encryption for API keys
    "cryptography>=41.0.0",

    # Rate limiting
    "aiolimiter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outreach_intelligence"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
